--- a/app/src/main/res/layout/activity_juego_dificil.xml
+++ b/app/src/main/res/layout/activity_juego_dificil.xml
@@ -1,9 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".activities.JuegoDificilActivity">
 
-</android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <ImageView
+            android:id="@+id/img_dificil_1"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_2"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_3"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_4"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <ImageView
+            android:id="@+id/img_dificil_5"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_6"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_7"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_8"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <ImageView
+            android:id="@+id/img_dificil_9"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_10"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_11"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_12"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_weight="2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <ImageView
+            android:id="@+id/img_dificil_13"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_14"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_15"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+        <ImageView
+            android:id="@+id/img_dificil_16"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/no"
+            android:onClick="imagenSeleccionada"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_weight="0.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
+
+        <TextView
+            android:id="@+id/nombreJ1"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/puntosJ1"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:text="0"
+            android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/nombreJ2"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" />
+        <TextView
+            android:id="@+id/puntosJ2"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:text="0"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
+
+</LinearLayout>
