--- a/app/src/main/res/layout/activity_juego_medio.xml
+++ b/app/src/main/res/layout/activity_juego_medio.xml
@@ -4,151 +4,218 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/juego_medio"
     android:orientation="vertical"
     tools:context=".activities.JuegoMedioActivity">
 
 
-
     <LinearLayout
-        android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        android:layout_weight="1"
+        android:background="@drawable/imagenes"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <ImageView
-            android:id="@+id/img_medio_1"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_medio_2"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_medio_3"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
 
+            <ImageView
+                android:id="@+id/img_medio_4"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_medio_5"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_medio_6"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/img_medio_7"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_medio_8"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_medio_9"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/img_medio_1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_medio_2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_medio_3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/img_medio_10"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_medio_11"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_medio_12"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <ImageView
-            android:id="@+id/img_medio_4"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_medio_5"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_medio_6"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <ImageView
-            android:id="@+id/img_medio_7"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_medio_8"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_medio_9"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <ImageView
-            android:id="@+id/img_medio_10"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_medio_11"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_medio_12"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="0.5"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_weight="8"
+        android:padding="5dp">
 
-        <TextView
-            android:id="@+id/nombreJ1"
-            android:layout_weight="1"
+        <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="match_parent" />
-        <TextView
-            android:id="@+id/puntosJ1"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
+            android:background="@drawable/nom_punt"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/nombreJ1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/amiko_bold" />
+
+            <TextView
+                android:id="@+id/puntosJ1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:text="0"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/amiko_bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="0dp"
-            android:text="0"
-            android:layout_height="match_parent" />
-        <TextView
-            android:id="@+id/nombreJ2"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-        <TextView
-            android:id="@+id/puntosJ2"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:text="0"
-            android:layout_height="match_parent" />
+            android:background="@drawable/nom_punt"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/nombreJ2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/amiko_bold" />
+
+            <TextView
+                android:id="@+id/puntosJ2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:text="0"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/amiko_bold" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
