--- a/app/src/main/res/layout/activity_niveles.xml
+++ b/app/src/main/res/layout/activity_niveles.xml
@@ -10,19 +10,19 @@
         android:id="@+id/imageView3"
         android:layout_width="0dp"
         android:layout_height="200dp"
+        android:background="@drawable/niveles_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/niveles_1" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_juego_facil"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginStart="80dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="53dp"
         android:background="@drawable/btn_facil"
         android:onClick="jugar"
@@ -34,10 +34,10 @@
         android:id="@+id/btn_juego_medio"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginStart="80dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/btn_medio"
         android:onClick="jugar"
@@ -49,10 +49,10 @@
         android:id="@+id/btn_juego_dificil"
         android:layout_width="0dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginLeft="80dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginStart="80dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/btn_dificil"
         android:onClick="jugar"
