--- a/app/src/main/res/layout/activity_juego_configuracion.xml
+++ b/app/src/main/res/layout/activity_juego_configuracion.xml
@@ -4,199 +4,270 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/juego_configuracion"
     android:orientation="vertical"
     tools:context=".activities.JuegoConfiguracionActivity">
 
     <LinearLayout
-        android:layout_weight="2"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="match_parent"
+        android:layout_margin="20dp"
+        android:layout_weight="1"
+        android:background="@drawable/imagenes"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <ImageView
-            android:id="@+id/img_configuracion_1"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_2"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_3"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_4"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/img_configuracion_9"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_10"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_11"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_12"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/img_configuracion_1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_4"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/img_configuracion_5"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_6"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_7"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_8"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <ImageView
+                android:id="@+id/img_configuracion_13"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_14"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_15"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+
+            <ImageView
+                android:id="@+id/img_configuracion_16"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:onClick="imagenSeleccionada"
+                android:src="@drawable/no" />
+        </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <ImageView
-            android:id="@+id/img_configuracion_5"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_6"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_7"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_8"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <ImageView
-            android:id="@+id/img_configuracion_9"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_10"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_11"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_12"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-    <LinearLayout
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-
-        <ImageView
-            android:id="@+id/img_configuracion_13"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_14"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_15"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-        <ImageView
-            android:id="@+id/img_configuracion_16"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/no"
-            android:onClick="imagenSeleccionada"
-            android:layout_height="match_parent" />
-    </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="0.5"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="match_parent"
+        android:layout_weight="8"
+        android:padding="10dp">
 
-        <TextView
-            android:id="@+id/nombreJ1"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-        <TextView
-            android:id="@+id/puntosJ1"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:text="0"
-            android:layout_height="match_parent" />
         <LinearLayout
             android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="1"
-            android:layout_height="match_parent">
+            android:background="@drawable/nom_punt"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/nombreJ1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/amiko_bold" />
+
+            <TextView
+                android:id="@+id/puntosJ1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:text="0"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/amiko_bold" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/nom_punt"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/nombreJ2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/amiko_bold" />
+
+            <TextView
+                android:id="@+id/puntosJ2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5"
+                android:gravity="center"
+                android:text="0"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:fontFamily="@font/amiko_bold" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@android:color/holo_blue_bright">
 
             <TextView
                 android:id="@+id/tiempoDesc"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:textSize="20dp"
-                android:visibility="gone"
-                android:textColor="@color/colorAccent"
-                android:layout_width="0dp"
                 android:text="0"
-                android:layout_height="match_parent" />
+                android:textColor="@color/colorAccent"
+                android:textSize="20dp"
+                android:visibility="gone" />
 
             <Chronometer
                 android:id="@+id/tiempoAsc"
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:visibility="gone"
-                android:layout_height="match_parent" />
+                android:visibility="gone" />
 
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/nombreJ2"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent" />
-        <TextView
-            android:id="@+id/puntosJ2"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:text="0"
-            android:layout_height="match_parent" />
     </LinearLayout>
 
 
