--- a/app/src/main/res/layout/activity_juego_configuracion.xml
+++ b/app/src/main/res/layout/activity_juego_configuracion.xml
@@ -9,10 +9,48 @@
     tools:context=".activities.JuegoConfiguracionActivity">
 
     <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:layout_weight="8"
+        android:background="@drawable/tiempo"
+        android:gravity="center">
+
+        <TextView
+            android:id="@+id/tiempoDesc"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:lineSpacingExtra="18sp"
+            android:text="0"
+            android:textColor="@android:color/background_light"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <Chronometer
+            android:id="@+id/tiempoAsc"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:lineSpacingExtra="18sp"
+            android:textColor="@android:color/background_light"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="20dp"
-        android:layout_weight="1"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="16dp"
+        android:layout_weight="2"
         android:background="@drawable/imagenes"
         android:orientation="vertical"
         android:padding="10dp">
@@ -238,33 +276,6 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:fontFamily="@font/amiko_bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/holo_blue_bright">
-
-            <TextView
-                android:id="@+id/tiempoDesc"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="0"
-                android:textColor="@color/colorAccent"
-                android:textSize="20dp"
-                android:visibility="gone" />
-
-            <Chronometer
-                android:id="@+id/tiempoAsc"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:visibility="gone" />
-
 
         </LinearLayout>
 
