--- a/app/src/main/res/layout/content_item_list.xml
+++ b/app/src/main/res/layout/content_item_list.xml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="100dp"
+    android:layout_margin="5dp"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:paddingLeft="20dp">
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Nombre"
+        android:textSize="20sp"
+        app:fontFamily="@font/amiko_bold" />
+
     <TextView
         android:id="@+id/contentNombre"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="hola"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:fontFamily="@font/amiko_bold" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Puntos"
+        android:textSize="20sp"
+        app:fontFamily="@font/amiko_bold" />
+
     <TextView
         android:id="@+id/contentPuntos"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="hola"
+        android:textSize="18sp"
+        app:fontFamily="@font/amiko_bold" />
 
 
 </LinearLayout>
